--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,18 @@
 <body>
   <nav class="navbar navbar-expand-sm" style="background-color:#2684FF;">
     <a class="navbar-brand" href="https:///hub.docker.com" target="_blank" style="color:#fff;">
-	<img src="../static/images/docker_logo.png">Docker Container Application by kevin.lee "hylee@dshub.cloud"</a>
+	<img src="../static/images/docker_logo.png">Docker Container Application.</a>
   </nav>
-
   <div class="container" style="padding:20px 0 0 0">
     <div class="row">
-      <img src="{{image_path}}" style="width:100%" />
+      <div class="alert alert-danger" role="alert">
+        [Currently you have {{visit_count}} visits.]
+      </div>
+    </div>
+    <div class="row">
+      <img class="img-fluid" src="{{image_path}}" />
     </div>
   </div>
 </body>
-
 </html>
+
