--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,11 @@
 <body>
   <nav class="navbar navbar-expand-sm" style="background-color:#2684FF;">
     <a class="navbar-brand" href="https:///hub.docker.com" target="_blank" style="color:#fff;">
-	<img src="../static/images/docker_logo.png">Docker Container Application.</a>
+        <img src="../static/images/docker_logo.png">Docker Container Application.</a>
   </nav>
   <div class="container" style="padding:20px 0 0 0">
     <div class="row">
-      <div class="alert alert-danger" role="alert">
+      <div class="alert alert-danger" role="alert" style="font-size: 2.5em; font-weight: bold;">
         [Currently you have {{visit_count}} visits.]
       </div>
     </div>
@@ -25,4 +25,3 @@
   </div>
 </body>
 </html>
-
